Перенести модели и контролеры в ядро
- Перенесены классы моделей и контролеров ASP.NET Identity из Tasks в
ClassLibrary.Core
- Установлены необходимые библиотеки в ClassLibrary.Core
- Изменены ссылки представлений в Tasks на контролеры в
ClassLibrary.Core

--- a/Tasks/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Tasks/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.ExternalLoginConfirmationViewModel
+﻿@model ClassLibrary.Core.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Регистрация";
 }
