--- a/Tasks/Views/Account/Register.cshtml
+++ b/Tasks/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.RegisterViewModel
+﻿@model ClassLibrary.Core.Models.RegisterViewModel
 @{
     ViewBag.Title = "Регистрация";
 }
