--- a/Tasks/Views/Account/ResetPassword.cshtml
+++ b/Tasks/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.ResetPasswordViewModel
+﻿@model ClassLibrary.Core.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Сброс пароля";
 }
