--- a/Tasks/Views/Manage/AddPhoneNumber.cshtml
+++ b/Tasks/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.AddPhoneNumberViewModel
+﻿@model ClassLibrary.Core.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Номер телефона";
 }
