--- a/Tasks/Views/Manage/ChangePassword.cshtml
+++ b/Tasks/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.ChangePasswordViewModel
+﻿@model ClassLibrary.Core.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Смена пароля";
 }
