--- a/Tasks/Views/Manage/ManageLogins.cshtml
+++ b/Tasks/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.ManageLoginsViewModel
+﻿@model ClassLibrary.Core.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Управление внешними именами входа";
