--- a/Tasks/Views/Manage/SetPassword.cshtml
+++ b/Tasks/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.SetPasswordViewModel
+﻿@model ClassLibrary.Core.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Создать пароль";
 }
