--- a/Tasks/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/Tasks/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.VerifyPhoneNumberViewModel
+﻿@model ClassLibrary.Core.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Проверка номера телефона";
 }
