--- a/Tasks/Views/Account/ForgotPassword.cshtml
+++ b/Tasks/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.ForgotPasswordViewModel
+﻿@model ClassLibrary.Core.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Забыли пароль?";
 }
