--- a/Tasks/Views/Account/VerifyCode.cshtml
+++ b/Tasks/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.VerifyCodeViewModel
+﻿@model ClassLibrary.Core.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Проверить";
 }
