--- a/Tasks/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Tasks/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tasks.Models.ExternalLoginListViewModel
+﻿@model ClassLibrary.Core.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Используйте для входа другую службу.</h4>
