Реализовать отображение сведений о задании
- Добавлен метод Description в класс MyTasksController
- Создано временное представление MyTasks\Description

--- a/Tasks/Views/MyTasks/Index.cshtml
+++ b/Tasks/Views/MyTasks/Index.cshtml
@@ -32,6 +32,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
+            <td>
+                <p>
+                    <a href="/MyTasks/Description?taskId=@item.StudentTaskId">Описание</a>
+                </p>
+            </td>
         </tr>
     }
 </table>
