--- a/Tasks/Views/MyTasks/Description.cshtml
+++ b/Tasks/Views/MyTasks/Description.cshtml
@@ -10,10 +10,18 @@
         <div class="panel-body">
             @ViewBag.Task.Description
         </div>
+        <div class="panel-body">
+            @{
+                ViewBag.Title = "Upload";
+            }
+        </div>
         <div class="panel-footer">
-            <div class="text-right">
-                <button class="btn btn-primary">Отправить ответ</button>
-            </div>
+            <h4>Отправить решение</h4>
+            @using (Html.BeginForm("UploadSolution", "MyTasks", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                <input type="file" name="upload" /><br>
+                <input type="submit" value="Загрузить" class="btn btn-primary" />
+            }
         </div>
     </div>
 </div>
