--- a/Tasks/Views/MyTasks/Description.cshtml
+++ b/Tasks/Views/MyTasks/Description.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ClassLibrary.Core.Models.StudentTask
 @{
-    ViewBag.Title = ViewBag.Task;
+    ViewBag.Title = ViewBag.Task.Title;
 }
 <div class="row col-md-offset-3 col-md-6">
     <div class="panel panel-default">
@@ -10,15 +10,11 @@
         <div class="panel-body">
             @ViewBag.Task.Description
         </div>
-        <div class="panel-body">
-            @{
-                ViewBag.Title = "Upload";
-            }
-        </div>
         <div class="panel-footer">
             <h4>Отправить решение</h4>
             @using (Html.BeginForm("UploadSolution", "MyTasks", FormMethod.Post, new { enctype = "multipart/form-data" }))
             {
+                <input type="hidden" name="taskId" value= @ViewBag.Task.StudentTaskId />
                 <input type="file" name="upload" /><br>
                 <input type="submit" value="Загрузить" class="btn btn-primary" />
             }
