--- a/Tasks/Views/MyStudents/TasksList.cshtml
+++ b/Tasks/Views/MyStudents/TasksList.cshtml
@@ -13,7 +13,7 @@
 <form class="col-md-offset-1" method="get">
     <div class="form-group">
         <div class="col-md-4">
-            @Html.DropDownList("userId", Model.Users as SelectList, new { @class = "form-control" })
+            @Html.DropDownList("userId", Model.Students as SelectList, new { @class = "form-control" })
         </div>
         <div class="col-md-4">
             @Html.DropDownList("disciplineId", Model.Disciplines as SelectList, new { @class = "form-control" })
