Изменить визуальное представление форм
- Добавлена главная страница;
- Изменена форма добавления задания;
- Изменено представление списка задания для преподавателя;
- Мелкие изменения в оформлении;

--- a/Tasks/Content/Site.css
+++ b/Tasks/Content/Site.css
@@ -22,3 +22,20 @@ select,
 textarea {
     max-width: 100%!important;
 }
+
+/* Styling Input type=file to look like a regular button */
+.file-upload {
+  position: relative;
+  overflow: hidden;
+  margin: 10px; }
+
+.file-upload input.upload {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0); }
