--- a/Tasks/Views/MyStudents/NewTask.cshtml
+++ b/Tasks/Views/MyStudents/NewTask.cshtml
@@ -1,25 +1,49 @@
-﻿@using ClassLibrary.Core.Models
-@model StudentTask
+﻿@model ClassLibrary.Core.Models.StudentTask
+
 @{
-    ViewBag.Title = "Добавить задание";
+    ViewBag.Title = "Новое задание";
 }
 
-<div>
-    <h2>Добавить новое задание</h2>
-    @using (Html.BeginForm("NewTask", "MyStudents", FormMethod.Post))
-    {
-        @Html.LabelFor(model => model.UserId,"Выберите студента: ")
-        @Html.DropDownListFor(model => model.UserId, (IEnumerable<SelectListItem>)ViewData["AllStudents"], "Выберите студента")
-        <br />
-        @Html.LabelFor(model => model.DisciplineId, "Выберите дисциплину: ")
-        @Html.DropDownListFor(model => model.DisciplineId, (IEnumerable<SelectListItem>)ViewData["AllDisciplines"], "Выберите дисциплину")
-        <br />
-        @Html.LabelFor(model => model.Title, "Введите заголовок: ")
-        @Html.TextBoxFor(model => model.Title)
-        <br />
-        @Html.LabelFor(model => model.Description, "Введите описание")
-        @Html.TextBoxFor(model => model.Description)
-        <br />
-        <p><input type="submit" value="Отправить" /></p>
-    }
-</div>
+<h2>
+    @ViewBag.Title
+    <small><p>Добавить новое задание для студента</p></small>
+</h2>
+<hr />
+
+
+@using (Html.BeginForm("NewTask", "MyStudents", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    <div class="form-group">
+        @Html.LabelFor(model => model.UserId, "Студент", new { @class = "col-md-2 control-label" })
+        <div class="col-md-8">
+            @Html.DropDownListFor(model => model.UserId, (IEnumerable<SelectListItem>)ViewData["AllStudents"], "Выберите студента", new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.DisciplineId, "Дисциплина", new { @class = "col-md-2 control-label" })
+        <div class="col-md-8">
+            @Html.DropDownListFor(model => model.DisciplineId, (IEnumerable<SelectListItem>)ViewData["AllDisciplines"], "Выберите дисциплину", new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Title, "Заголовок", new { @class = "col-md-2 control-label" })
+        <div class="col-md-8">
+            @Html.TextBoxFor(model => model.Title, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Description, "Описание", new { @class = "col-md-2 control-label" })
+        <div class="col-md-8">
+            @Html.TextAreaFor(model => model.Description, new { @class = "form-control", rows = "5" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-8">
+            <input type="submit" class="btn btn-primary btn-block" value="Отправить" />
+        </div>
+    </div>
+}
