--- a/Tasks/Views/MyStudents/TasksList.cshtml
+++ b/Tasks/Views/MyStudents/TasksList.cshtml
@@ -1,25 +1,26 @@
 ﻿@model ClassLibrary.Core.Models.AllStudentsTasksListViewModel
 
 @{
-    ViewBag.Title = "Задания студентов";
+    ViewBag.Title = "Задания";
 }
 
-<h2>Задания студентов</h2>
-
-<h4>
-    @Html.ActionLink("Добавить новое задание", "NewTask")
-</h4>
+<h2>
+    @ViewBag.Title
+    <small><p>Список заданий для студентов</p></small>
+</h2>
+<hr />
 
 <form class="col-md-offset-1" method="get">
     <div class="form-group">
         <div class="col-md-4">
             @Html.DropDownList("userId", Model.Students as SelectList, new { @class = "form-control" })
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
             @Html.DropDownList("disciplineId", Model.Disciplines as SelectList, new { @class = "form-control" })
         </div>
-        <div class="col-md-3">
-            <input type="submit" value="Применить фильтр" class="btn btn-primary" />
+        <div class="col-md-4">
+            <input type="submit" value="Применить фильтр" class="btn btn-primary" />        
+            <a href="/MyStudents/NewTask" class="btn btn-primary" role="button" style="margin-left:10px">Добавить задание</a>            
         </div>
     </div>
 </form>
@@ -29,8 +30,7 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th class="col-md-2">Фамилия</th>
-                <th class="col-md-2">Имя</th>
+                <th class="col-md-2">Студент</th>                
                 <th class="col-md-2">Дисциплина</th>
                 <th class="col-md-6">Задание</th>
                 <th class="col-md-2"></th>
@@ -39,11 +39,9 @@
         <tbody>
             @foreach (var item in Model.StudentTasks)
             {
-                <tr>
+                <tr data-toggle="collapse" data-target="#@item.StudentTaskId">
                     <td>
                         @Html.DisplayFor(modelItem => item.User.LastName)
-                    </td>
-                    <td>
                         @Html.DisplayFor(modelItem => item.User.FirstName)
                     </td>
                     <td>
@@ -53,8 +51,18 @@
                         @Html.DisplayFor(modelItem => item.Title)
                     </td>
                     <td class="text-right">
-                        <a href>Подробнее</a>
+                        <a href="#">Подробнее</a>
                     </td>
+                </tr>
+                <tr id="@item.StudentTaskId" class="collapse">
+                    <td />
+                    <td />
+                    <td>
+                        <div>
+                            @Html.DisplayFor(modelItem => item.Description)                            
+                        </div>
+                    </td>
+                    <td />
                 </tr>
             }
         </tbody>
