--- a/Tasks/Views/MyStudents/NewTask.cshtml
+++ b/Tasks/Views/MyStudents/NewTask.cshtml
@@ -30,14 +30,14 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Title, "Заголовок", new { @class = "col-md-2 control-label" })
         <div class="col-md-8">
-            @Html.TextBoxFor(model => model.Title, new { @class = "form-control" })
+            @Html.TextBoxFor(model => model.Title, new { @class = "form-control", placeholder = "Введите заголовок" })
         </div>
     </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.Description, "Описание", new { @class = "col-md-2 control-label" })
         <div class="col-md-8">
-            @Html.TextAreaFor(model => model.Description, new { @class = "form-control", rows = "5" })
+            @Html.TextAreaFor(model => model.Description, new { @class = "form-control", rows = "5", placeholder = "Введите описание" })
         </div>
     </div>
 
