--- a/Tasks/Views/MyStudents/NewTask.cshtml
+++ b/Tasks/Views/MyStudents/NewTask.cshtml
@@ -46,6 +46,14 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.MaxPoints, "Максимальный балл", new { @class = "col-md-2 control-label" })
+        <div class="col-md-8">
+            @Html.TextAreaFor(model => model.MaxPoints, new { @class = "form-control", rows = "1", placeholder = "Укажите максимальный балл" })
+            @Html.ValidationMessageFor(model => model.MaxPoints)
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-8">
             <input type="submit" class="btn btn-primary btn-block" value="Отправить" />
         </div>
