--- a/Tasks/Views/MyStudents/EditTask.cshtml
+++ b/Tasks/Views/MyStudents/EditTask.cshtml
@@ -6,7 +6,7 @@
 
 <h2>
     @ViewBag.Title
-    <small><p>Редактировать задание</p></small>
+    <small><p>Редактировать информацию о задании</p></small>
 </h2>
 <hr />
 
@@ -57,6 +57,19 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-8">
             <input type="submit" class="btn btn-primary btn-block" value="Отправить" />
+        </div>
+    </div>
+    
+}
+
+@using (Html.BeginForm("DeleteTask", "MyStudents", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    @Html.HiddenFor(model => model.StudentTaskId)
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-8">
+            <input type="hidden" name="taskId" value=@Model.StudentTaskId />
+            <input type="submit" class="btn btn-primary btn-block" value="Удалить" />
         </div>
     </div>
 }
