--- a/Tasks/Views/Student/List.cshtml
+++ b/Tasks/Views/Student/List.cshtml
@@ -44,7 +44,7 @@
                         </td>
                         <td>@Html.DisplayFor(modelItem => item.Points)/@Html.DisplayFor(modelItem => item.MaxPoints)</td>
                         <td class="text-right">
-                            <a href="/MyTasks/Description?taskId=@item.StudentTaskId">Подробнее</a>
+                            <a href="/Student/Description?taskId=@item.StudentTaskId">Подробнее</a>
                         </td>
                     </tr>
                 }
