--- a/Tasks/Views/Student/Description.cshtml
+++ b/Tasks/Views/Student/Description.cshtml
@@ -16,7 +16,7 @@
         </div>
         <div class="panel-footer">
             <h4>Отправить решение</h4>
-            @using (Html.BeginForm("UploadSolution", "MyTasks", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            @using (Html.BeginForm("UploadSolution", "Student", FormMethod.Post, new { enctype = "multipart/form-data" }))
             {
                 <input type="hidden" name="taskId" value=@Model.StudentTaskId />
                 <input type="file" name="upload" /><br>
